# WorldVLA

UniTok-Drive-Lite/: CODE_SUMMARY.md  README.md  requirements.txt
UniTok-Drive-Lite/data/: __init__.py  bev_rasterizer.py
UniTok-Drive-Lite/infer/: __init__.py  planner.py
UniTok-Drive-Lite/models/: __init__.py  (+4 more)
WaypointPlanner/: Description.md  README.md  pyproject.toml
WaypointPlanner/language_waypoint_planner/: __init__.py  constants.py
WaypointPlanner/language_waypoint_planner/configs/: __init__.py  loader.py  minimal_debug.yaml  multitask_vla.yaml  schema.py  waymo_pretrain.yaml
WaypointPlanner/language_waypoint_planner/data/: __init__.py  collate.py  datasets.py  label_utils.py  sample.py  tokenizer.py
WaypointPlanner/language_waypoint_planner/eval/: __init__.py  evaluator.py  metrics.py  visualize.py
WaypointPlanner/language_waypoint_planner/losses/: __init__.py  behavior.py  planner_loss.py  preference.py  rationale.py  smoothness.py  waypoint.py
WaypointPlanner/language_waypoint_planner/models/: __init__.py  ego_encoder.py  fusion_transformer.py  heads.py  planner_model.py  route_encoder.py  text_encoder.py  vision_encoder.py
WaypointPlanner/language_waypoint_planner/scripts/: __init__.py  run_minimal_debug.py
WaypointPlanner/language_waypoint_planner/sim/: __init__.py  carla_bridge.py
WaypointPlanner/language_waypoint_planner/train/: __init__.py  checkpoint.py  dataset_factory.py  engine.py  logger.py  seed.py  train_multitask.py  train_waymo.py
WaypointPlanner/tests/: test_datasets.py  test_losses.py  test_model.py  test_train_step.py
(+18 files in other folders)
